kubernetes/nginx-ingress-test/deployment-nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
  namespace: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      labels:
        app: nginx-ingress
    spec:
      containers:
      - name: nginx-ingress
        image: nginx/nginx-ingress:latest
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
